--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b3dce
 	padding: 15px;
 	font-weight: bold;
 	border-radius: 20px;
+	font-size: .70em;
 
 
 }
